Putting Claude to work on this problem.